--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -213,3 +213,14 @@ pre {
     padding-top: 5px;
   }
 }
+
+// Config TOC
+// Adding 'Contents' headline to the TOC
+#markdown-toc::before {
+  content: "目录";
+  font-weight: bold;
+}
+
+#markdown-toc {
+  display: inline-block;
+}
