--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -14,7 +14,6 @@
   @include relative-font-size(1.625);
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
-  letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
 
@@ -110,66 +109,16 @@
   padding: $spacing-unit 0;
 }
 
-.footer-heading {
-  @include relative-font-size(1.125);
-  margin-bottom: $spacing-unit / 2;
-}
-
-.contact-list,
-.social-media-list {
-  list-style: none;
-  margin-left: 0;
-}
-
 .footer-col-wrapper {
+  text-align: center;
   @include relative-font-size(0.9375);
   color: $grey-color;
-  margin-left: -$spacing-unit / 2;
   @extend %clearfix;
-}
 
-.footer-col {
-  float: left;
-  margin-bottom: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-  width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-  width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-  width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-  .footer-col-1,
-  .footer-col-2 {
-    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-    width:         calc(50% - (#{$spacing-unit} / 2));
-  }
-
-  .footer-col-3 {
-    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-    width:         calc(100% - (#{$spacing-unit} / 2));
+  > span {
+    letter-spacing: 2px;
   }
 }
-
-@include media-query($on-palm) {
-  .footer-col {
-    float: none;
-    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-    width:         calc(100% - (#{$spacing-unit} / 2));
-  }
-}
-
 
 
 /**
@@ -188,7 +137,7 @@
   list-style: none;
 
   > li {
-    margin-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit / 2;
   }
 }
 
@@ -207,17 +156,74 @@
 /**
  * Posts
  */
+ .post {
+  // 强制文本换行
+  // word-break: break-all;
+  word-wrap: break-word;
+
+  // 保证块/段落之间的空白隔行
+  p, pre, ul, ol, dl, form, hr, table, blockquote {
+    margin-bottom: 1.2em;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 1em;
+    margin-bottom: 0.6em;
+  }
+
+  h1 {
+    font-weight: bold;
+    font-size: 1.875em;
+    /*30 / 16*/
+    line-height: 1.6em;
+    /* 48 / 30*/
+  }
+
+  h2,
+  h3 {
+    font-size: 1.3125em;
+    /*21 / 16*/
+    line-height: 1.15;
+    /*24 / 21*/
+  }
+  h2 {
+    font-weight: bold;
+  }
+  h4 {
+    font-size: 1.125em;
+    /*18 / 16*/
+  }
+  h5,
+  h6 {
+    font-size: 1em;
+    /*16*/
+  }
+
+  h1 {
+    border-bottom: 1px solid $hr-color;
+    padding-bottom: 0.5em;
+  }
+
+  a {
+    color: $text-color;
+    border-bottom: 3px solid $link-color;
+    box-shadow: inset 0 -1px 0 $link-color;
+  }
+
+  p {
+    margin-bottom: 1.2em;
+  }
+}
+
 .post-header {
   margin-bottom: $spacing-unit;
 }
 
 .post-title {
-  @include relative-font-size(2.625);
-  letter-spacing: -1px;
   line-height: 1;
 
   @include media-query($on-laptop) {
-    @include relative-font-size(2.25);
+    // @include relative-font-size(2.25);
   }
 }
 
@@ -225,10 +231,10 @@
   margin-bottom: $spacing-unit;
 
   h2 {
-    @include relative-font-size(2);
+    @include relative-font-size(1.75);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.75);
+      @include relative-font-size(1.625);
     }
   }
 
