--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -199,17 +199,6 @@
     /*16*/
   }
 
-  h1 {
-    border-bottom: 1px solid $hr-color;
-    padding-bottom: 0.5em;
-  }
-
-  a {
-    color: $text-color;
-    border-bottom: 3px solid $link-color;
-    box-shadow: inset 0 -1px 0 $link-color;
-  }
-
   p {
     margin-bottom: 1.2em;
   }
@@ -252,5 +241,11 @@
     @include media-query($on-laptop) {
       @include relative-font-size(1.125);
     }
+  }
+
+  p a {
+    color: $text-color;
+    border-bottom: 3px solid $link-color;
+    box-shadow: inset 0 -1px 0 $link-color;
   }
 }
