--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -4,7 +4,7 @@
 
 $base-font-family: PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif !default;
 $quote-font: Palatino, Optima, Georgia, serif;
-$code-font: Menlo, 'Spoqa Han Sans', Monaco, monospace;
+$code-font: "Source Code Pro", Consolas, "Liberation Mono", Menlo, Courier, monospace;;
 
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
