--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -237,8 +237,8 @@ hr {
 
   @include media-query($on-laptop) {
     max-width: $content-width;
-    padding-right: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
   }
 }
 
