--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,6 +2,7 @@
  * Site header
  */
 .site-header {
+  background-color: white;
   border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
@@ -161,46 +162,8 @@
   // word-break: break-all;
   word-wrap: break-word;
 
-  // 保证块/段落之间的空白隔行
-  p, pre, ul, ol, dl, form, hr, table, blockquote {
-    margin-bottom: 1em;
-  }
-
   h1, h2, h3, h4, h5, h6 {
-    margin-top: 1em;
-    margin-bottom: 0.6em;
-  }
-
-  h1 {
     font-weight: bold;
-    font-size: 1.875em;
-    /*30 / 16*/
-    line-height: 1.6em;
-    /* 48 / 30*/
-  }
-
-  h2,
-  h3 {
-    font-size: 1.3125em;
-    /*21 / 16*/
-    line-height: 1.15;
-    /*24 / 21*/
-  }
-  h2 {
-    font-weight: bold;
-  }
-  h4 {
-    font-size: 1.125em;
-    /*18 / 16*/
-  }
-  h5,
-  h6 {
-    font-size: 1em;
-    /*16*/
-  }
-
-  p {
-    margin-bottom: 0.5em;
   }
 }
 
@@ -247,5 +210,9 @@
     color: $text-color;
     border-bottom: 3px solid $link-color;
     box-shadow: inset 0 -1px 0 $link-color;
+  }
+  p a:hover {
+    background-color: $link-color;
+    text-decoration: none;
   }
 }
