--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -13,7 +13,6 @@
 
 .site-title {
   @include relative-font-size(1.625);
-  font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
   margin-bottom: 0;
   float: left;
@@ -173,40 +172,46 @@
   text-align: justify;
 
   h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
     // 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化
     line-height:1;
-    font-family:Arial,sans-serif;
-    margin: 1.4em 0 0;
+    margin-top: 1.2em;
   }
 
-  h1 { font-size:1.8em; }
-  h2 { font-size:1.6em; }
-  h3 { font-size:1.4em; }
-  h4 { font-size:1.2em; }
+  h1 {
+    font-size: 1.883em;
+    line-height: 1.125em;
+  }
   h5, h6 { font-size:1em; }
 
+  h1 {
+    border-bottom: 1px solid $hr-color;
+    margin-bottom: 0.6em;
+    padding-bottom: 0.4em;
+  }
+
   h2 {
-    @include relative-font-size(1.75);
+    margin-bottom: 1em;
+    @include relative-font-size(26 / $base-font-size);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.625);
+      @include relative-font-size(28 / $base-font-size);
     }
   }
 
   h3 {
-    @include relative-font-size(1.625);
+    margin-bottom: 0.8em;
+    @include relative-font-size(22 / $base-font-size);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.375);
+      @include relative-font-size(24 / $base-font-size);
     }
   }
 
   h4 {
-    @include relative-font-size(1.25);
+    @include relative-font-size(18 / $base-font-size);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.125);
+      @include relative-font-size(20 / $base-font-size);
     }
   }
 
