--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "zh-Hans" }}">
+<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 
   {% include head.html %}
 
