--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,8 +2,6 @@
  * Site header
  */
 .site-header {
-  background-color: white;
-  border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
 
@@ -147,8 +145,8 @@
 }
 
 .post-link {
-  display: block;
-  @include relative-font-size(1.2);
+  // display: block;
+  // @include relative-font-size(1.2);
 }
 
 .post-header {
@@ -164,55 +162,29 @@
 }
 
 .post-content {
-  margin-bottom: $spacing-unit;
+  // margin-bottom: $spacing-unit;
 
   // 强制文本换行
-  // word-break: break-all;
+  word-break: break-all;
   word-wrap: break-word;
   text-align: justify;
 
+  /* 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化 */
   h1, h2, h3, h4, h5, h6 {
-    // 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化
-    line-height:1;
-    margin-top: 1.2em;
+      line-height: 1.2;
+      margin: 1em 0 0.8em;
+      font-family: Arial,sans-serif;
   }
 
-  h1 {
-    font-size: 1.883em;
-    line-height: 1.125em;
-  }
+  h1 { font-size:1.8em; }
+  h2 { font-size:1.5em; }
+  h3 { font-size:1.3em; }
+  h4 { font-size:1.1em; }
   h5, h6 { font-size:1em; }
 
   h1 {
     border-bottom: 1px solid $hr-color;
-    margin-bottom: 0.6em;
-    padding-bottom: 0.4em;
-  }
-
-  h2 {
-    margin-bottom: 0.6em;
-    @include relative-font-size(26 / $base-font-size);
-
-    @include media-query($on-laptop) {
-      @include relative-font-size(28 / $base-font-size);
-    }
-  }
-
-  h3 {
-    margin-bottom: 0.8em;
-    @include relative-font-size(22 / $base-font-size);
-
-    @include media-query($on-laptop) {
-      @include relative-font-size(24 / $base-font-size);
-    }
-  }
-
-  h4 {
-    @include relative-font-size(18 / $base-font-size);
-
-    @include media-query($on-laptop) {
-      @include relative-font-size(20 / $base-font-size);
-    }
+    padding-bottom: 0.2em;
   }
 
   p a {
