Remove archive & Update About

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,8 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Posts</h1>
+  <!-- 以下内容是 Minima 样式的主页，改为 Archive 的样式 -->
+  <!-- <h1 class="page-heading">Posts</h1>
 
   {{ content }}
 
@@ -16,7 +17,18 @@ layout: default
         <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
       </li>
     {% endfor %}
-  </ul>
+  </ul> -->
+
+  {% assign postsByMonthYear = site.posts | group_by_exp:"post", "post.date | date: '%b %Y'"  %}
+  {% for monthYear in postsByMonthYear %}
+    <h3>{{ monthYear.name }}</h3>
+      <ul>
+        {% for post in monthYear.items %}
+          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
+  {% endfor %}
+
 
   {% include footer.html %}
 
