--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -191,6 +191,7 @@ code {
 
 // ``` code block
 pre {
+  margin: 1.2em 0 1.2em;
   padding: 1em 1.5em;
   display: block;
   overflow-x: auto;
@@ -287,6 +288,7 @@ hr {
 
 #markdown-toc {
   display: inline-block;
+  @extend %vertical-rhythm;
 }
 
 #markdown-toc ul {
