--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -49,12 +49,16 @@ ul, ol, dl, figure,
 img {
   max-width: 100%;
   vertical-align: middle;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /**
  * Figures
  */
 figure > img {
+  max-width: 100%;
   display: block;
 }
 
@@ -191,7 +195,7 @@ code {
 
 // ``` code block
 pre {
-  margin: 1.2em 0 1.2em;
+  margin: 1.2em 0;
   padding: 1em 1.5em;
   display: block;
   overflow-x: auto;
@@ -291,10 +295,10 @@ hr {
 
 #markdown-toc {
   display: block;
-  padding: 0.5em 2em;
+  padding: 0.5em 2em 1em;
   margin-left: 0;
   margin-bottom: 20px;
-  background-color: #EEEEEE;
+  background-color: #f7f7f7;
   border-left: 5px solid $brand-color;
 
   line-height: 1.7em;
