--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -176,13 +176,17 @@
 
   h1 { font-size:1.8em; }
   h2 { font-size:1.5em; }
-  h3 { font-size:1.3em; }
+  h3 { font-size:1.25em; }
   h4 { font-size:1.1em; }
   h5, h6 { font-size:1em; }
 
   h1 {
     border-bottom: 1px solid $hr-color;
     padding-bottom: 0.2em;
+  }
+
+  h3 {
+    color: #E84F89;
   }
 
   p a {
